--- a/src/sass/pages/_edit.scss
+++ b/src/sass/pages/_edit.scss
@@ -159,11 +159,11 @@
 }
 
 .footer {
-    position: absolute;
+    position: relative;
     left: 0;
     width: 100%;
     background-color: base.$clr-white-100;
-    box-shadow: 0px -20px 20px 1px base.$clr-black-600;
+  //  box-shadow: 0px -20px 20px 1px base.$clr-black-600;
 }
 
 .footer-edit {
