--- a/src/sass/pages/_page.scss
+++ b/src/sass/pages/_page.scss
@@ -11,6 +11,13 @@
     overflow: hidden;
 }
 
+.app-overlay {
+    @include utils.mQ(40rem) {
+        overflow-y: hidden;
+        height: 100vh;
+    }
+}
+
 .address-sender-details,
 .address-reciever-details {
     display: flex;
